...
        label.font = UIFont.systemFont(ofSize: 13)
        label.textColor = UIColor(resource: .ypWhite)
        label.numberOfLines = 0
        return label
    }()
    
    private let logoutButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "logoutButton"
        button.setImage(.exit, for: .normal)
        return button
    }()
    
...
